tests/reference/asr-type_mismatch2-79a25db.stderr
semantic error: Type mismatch in binary operator, the types must be compatible
 --> tests/errors/type_mismatch2.f90:4:5
  |
4 | x = 5 + "x"
  |     ^   ^^^ type mismatch (integer and character)
